fix view api endpoint and shift view function to close popup event instead of open popup

--- a/root/src/pages/MyMap.css
+++ b/root/src/pages/MyMap.css
@@ -33,6 +33,10 @@
 .likes.liked {
     color: red;
 }
+.viewsRemaining {
+    text-decoration: none;
+    color: var(--jet);
+}
 
 .popupHeader #pausePlay {
     border-radius: 50%;
